@@ -5,64 +5,60 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
  * 
- * Copyright (C) 2010-2014 Matthew Turnbull <sparky@bluefang-logic.com>. All Rights Reserved.
+ * Copyright (C) 2010-2015 Matthew Turnbull <sparky@bluefang-logic.com>. All Rights Reserved.
  * 
  * ***** END LICENSE BLOCK *****
 */
 
-pref("status4evar.addonbar.borderStyle", false);
-pref("status4evar.addonbar.legacyShim", true);
-pref("status4evar.addonbar.windowGripper", true);
+pref("extensions.caligon.s4e.addonbar.borderStyle", false);
+pref("extensions.caligon.s4e.addonbar.legacyShim", true);
+pref("extensions.caligon.s4e.addonbar.windowGripper", true);
 
-pref("status4evar.advanced.showWarning", true);
-pref("status4evar.advanced.status.detectFullScreen", true);
-pref("status4evar.advanced.status.detectVideo", true);
-pref("status4evar.advanced.urlbar.forceBinding", false);
+pref("extensions.caligon.s4e.advanced.showWarning", true);
+pref("extensions.caligon.s4e.advanced.status.detectFullScreen", true);
+pref("extensions.caligon.s4e.advanced.status.detectVideo", true);
+pref("extensions.caligon.s4e.advanced.urlbar.forceBinding", false);
 
-pref("status4evar.download.button.action", 1);
-pref("status4evar.download.button.action.command", "");
-pref("status4evar.download.color.active", "#33FF33");
-pref("status4evar.download.color.paused", "#808080");
-pref("status4evar.download.force", true);
-pref("status4evar.download.label", 0);
-pref("status4evar.download.label.force", false);
-pref("status4evar.download.notify.animate", true);
-pref("status4evar.download.notify.timeout", 60);
-pref("status4evar.download.progress", 1);
-pref("status4evar.download.tooltip", 1);
+pref("extensions.caligon.s4e.download.button.action", 1);
+pref("extensions.caligon.s4e.download.button.action.command", "");
+pref("extensions.caligon.s4e.download.color.active", "#33FF33");
+pref("extensions.caligon.s4e.download.color.paused", "#808080");
+pref("extensions.caligon.s4e.download.force", true);
+pref("extensions.caligon.s4e.download.label", 0);
+pref("extensions.caligon.s4e.download.label.force", false);
+pref("extensions.caligon.s4e.download.notify.animate", true);
+pref("extensions.caligon.s4e.download.notify.timeout", 60);
+pref("extensions.caligon.s4e.download.progress", 1);
+pref("extensions.caligon.s4e.download.tooltip", 1);
 
-pref("status4evar.firstRun", true);
-pref("status4evar.firstRun.australis", true);
+pref("extensions.caligon.s4e.firstRun", true);
+pref("extensions.caligon.s4e.firstRun.australis", true);
 
-//pref("status4evar.progress.tab", 1);
-//pref("status4evar.progress.tab.css", "#33FF33");
-//pref("status4evar.progress.tab.style", true);
+pref("extensions.caligon.s4e.progress.toolbar.css", "#33FF33");
+pref("extensions.caligon.s4e.progress.toolbar.force", false);
+pref("extensions.caligon.s4e.progress.toolbar.style", false);
+pref("extensions.caligon.s4e.progress.toolbar.style.advanced", false);
 
-pref("status4evar.progress.toolbar.css", "#33FF33");
-pref("status4evar.progress.toolbar.force", false);
-pref("status4evar.progress.toolbar.style", false);
-pref("status4evar.progress.toolbar.style.advanced", false);
+pref("extensions.caligon.s4e.progress.urlbar", 1);
+pref("extensions.caligon.s4e.progress.urlbar.css", "#33FF33");
+pref("extensions.caligon.s4e.progress.urlbar.style", true);
+pref("extensions.caligon.s4e.progress.urlbar.style.advanced", false);
 
-pref("status4evar.progress.urlbar", 1);
-pref("status4evar.progress.urlbar.css", "#33FF33");
-pref("status4evar.progress.urlbar.style", true);
-pref("status4evar.progress.urlbar.style.advanced", false);
+pref("extensions.caligon.s4e.status", 1);
+pref("extensions.caligon.s4e.status.default", true);
+pref("extensions.caligon.s4e.status.network", true);
+pref("extensions.caligon.s4e.status.network.xhr", true);
+pref("extensions.caligon.s4e.status.timeout", 10);
+pref("extensions.caligon.s4e.status.linkOver", 1);
+pref("extensions.caligon.s4e.status.linkOver.delay.show", 70);
+pref("extensions.caligon.s4e.status.linkOver.delay.hide", 150);
 
-pref("status4evar.status", 1);
-pref("status4evar.status.default", true);
-pref("status4evar.status.network", true);
-pref("status4evar.status.network.xhr", true);
-pref("status4evar.status.timeout", 10);
-pref("status4evar.status.linkOver", 1);
-pref("status4evar.status.linkOver.delay.show", 70);
-pref("status4evar.status.linkOver.delay.hide", 150);
+pref("extensions.caligon.s4e.status.toolbar.maxLength", 0);
 
-pref("status4evar.status.toolbar.maxLength", 0);
+pref("extensions.caligon.s4e.status.urlbar.align", 0);
+pref("extensions.caligon.s4e.status.urlbar.color", "GrayText");
+pref("extensions.caligon.s4e.status.urlbar.position", 33);
 
-pref("status4evar.status.urlbar.align", 0);
-pref("status4evar.status.urlbar.color", "GrayText");
-pref("status4evar.status.urlbar.position", 33);
-
-pref("status4evar.status.popup.invertMirror", false);
-pref("status4evar.status.popup.mouseMirror", true);
+pref("extensions.caligon.s4e.status.popup.invertMirror", false);
+pref("extensions.caligon.s4e.status.popup.mouseMirror", true);
 
